# hope-payment-gateway

./: .dockerignore  .env.example  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.md  Dockerfile  GLOSSARY  MANIFEST.in  README.md  README.rst  compose.prd.yml  compose.test.yml  compose.yml  docker-entrypoint.sh  entrypoint.sh  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml  samples.json  samples_old.json  setup.py  tox.ini
.github/: file-filters.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/actions/checksum/: action.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml  sdlc-push.yml  sdlc-version-create.yml  test.yml
docker/: Dockerfile  Dockerfile.base  Dockerfile.det  Dockerfile.flat  Makefile  README.md  entrypoint.sh
docker/conf/: uwsgi.ini
docs/: index.md
docs/_scripts/: get_settings.py
docs/mg/: index.md  statuses.md
docs/setup/: index.md
docs/src/: .pages  index.md  process.md
docs/src/mg/: .pages  index.md  workflow.md
docs/src/setup/: index.md
docs/src/wu/: .pages  actions.md  index.md  statuses.md  workflow.md
docs/wu/: index.md
hope_payment_gateway/: celery.py
hope_payment_gateway/api/western_union/: urls.py
hope_payment_gateway/apps/core/: admin.py  dbrouters.py
hope_payment_gateway/apps/core/migrations/: 0001_initial.py
hope_payment_gateway/apps/hope/: admin.py  models.py
hope_payment_gateway/apps/hope/fixtures/: hope.json
hope_payment_gateway/apps/hope/migrations/: 0001_initial.py
hope_payment_gateway/apps/western_union/: admin.py  models.py  tasks.py  urls.py
hope_payment_gateway/apps/western_union/endpoints/: cancel_complete.py  cancel_request.py  client.py  helpers.py  nis.py  nis_acknovedge.py  nis_complete.py  push_notification.py  request.py  search_request.py  send_money_complete.py  send_money_store.py
hope_payment_gateway/apps/western_union/migrations/: 0001_initial.py  0006_rename_transaction_id_log_record_code.py  0007_rename_log_paymentrecordlog.py  0011_paymentrecordlog_status.py  0012_paymentinstruction_uuid_paymentrecordlog_uuid.py  0013_alter_paymentinstruction_uuid_and_more.py  0015_rename_paymentrecordlog_paymentrecord.py
hope_payment_gateway/apps/western_union/templates/: western_union.html
hope_payment_gateway/config/: celery.py  settings.py  urls.py  wsgi.py
ops/: cd-trn.yaml  ci.yaml  compose.ci-test.yml  compose.test.yml
ops/hope-payment-gateway/: Chart.yaml  values.yaml
ops/hope-payment-gateway/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  job.yaml  pvc.yaml  redis.yaml  secret.yaml  service.yaml
ops/hope-payment-gateway/templates/tests/: test-connection.yaml
src/hope_api_auth/: admin.py  auth.py  fields.py  models.py  views.py
src/hope_api_auth/migrations/: 0001_initial.py
src/hope_payment_gateway/: celery.py
src/hope_payment_gateway/api/: docs.py  urls.py
src/hope_payment_gateway/api/fsp/: filters.py  serializers.py  urls.py  views.py
src/hope_payment_gateway/api/western_union/: filters.py  serializers.py  urls.py  views.py
src/hope_payment_gateway/apps/core/: admin.py  apps.py  models.py  permissions.py  pipeline.py  storage.py  tasks.py
src/hope_payment_gateway/apps/fsp/: client.py  exceptions.py  tasks_utils.py  utils.py
src/hope_payment_gateway/apps/gateway/: actions.py  (+8 more)
src/hope_payment_gateway/config/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
src/hope_payment_gateway/libs/: ftp.py
tests/: .coveragerc  api_checker.py  conftest.py  factories.py  perms.py  test_admin_smoke.py  test_mail_configuration.py
tests/_api_checker/api_checker/: token_user.fixture.json
tests/api/: test_views.py  test_viewsets.py
tests/core/: test_models.py  test_permissions.py  test_pipeline.py  test_storage.py  test_tasks.py
tests/factories/: __init__.py  base.py  django_auth.py  django_celery_beat.py  payment.py  social.py  tasks.py  user.py
tests/fsp/: test_tasks_utils.py  test_utils.py
tests/gateway/: test_actions.py  test_models.py
tests/gateway/admin/: test_base.py  test_payment_instruction_admin.py  test_payment_record_admin.py  utils.py
tests/hope/: test_admin.py  test_models.py  test_tasks.py
tests/libs/: test_ftp.py
tests/moneygram/: test_client.py  test_endpoints.py  test_handlers.py  test_tasks.py  test_verify.py
tests/moneygram/responses/: push_notification.json  push_notification_ko.json  quote.yaml  refund.yaml  required_fields.yaml  service_options.yaml  status_missing.yaml  status_ok.yaml  token.yaml  token_ko.yaml  transaction.yaml  transaction_commit.yaml
tests/moneygram/tasks/: test_moneygram_notify.py  test_moneygram_send_task.py
tests/palpay/: test_client.py  test_endpoints.py  test_handlers.py  test_tasks.py
tests/western_union/: test_admin.py  test_helpers.py  test_models.py  test_tasks.py  test_views.py
tests/western_union/api/: test_views.py
tests/western_union/das/: das_countries_currencies.yaml  das_delivery_option_template.yaml  das_delivery_services.yaml  das_destination_countries.yaml  das_destination_currencies.yaml  das_origination_currencies.yaml  test_das.py
tests/western_union/endpoints/: cancel.yaml  cancel_ko.yaml  invalid_notification.xml  nis_notification_rejected.yaml  push_notification.xml  push_notification_2.xml  push_notification_cancel.xml  push_notification_error.xml  push_notification_purged.xml  push_notification_refund.xml  push_notification_reject_apn.xml  push_notification_success_apn.xml  request.yaml  search_ko.yaml  search_request.yaml  send_client_non_std_error.yaml  send_money.yaml  send_money_complete_corridor.yaml  send_money_store.yaml  status.yaml  test_cancel.py  test_client.py  test_das_countries_currencies.py  test_das_delivery_option_template.py  test_das_delivery_services.py  test_flows.py  test_nis.py  test_primitives.py  test_request.py  test_send_money.py  test_status.py  test_webhooks.py
tests/western_union/notifications/: push_notification.xml  test_push_notification.py
tests/western_union/primitives/: cancel_request.yaml  send_money_validation.yaml  test_primitives.py
(+515 files in other folders)
