[project]
name = "hope-payment-gateway"
version = "1.6.1"
description = "HOPE integration with FSPs"
readme = "README.md"
license = "Apache-2.0 OR MIT"

authors = [
  { name = "Domenico DiNicola", email = "dom.dinicola@gmail.com" },
]
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "celery[redis]",
  "dj-static",
  "django",
  "django-admin-extra-buttons",
  "django-admin-sync",
  "django-adminactions",
  "django-adminfilters",
  "django-advanced-filters",
  "django-celery-beat",
  "django-celery-boost>=0.6.2",
  "django-celery-results",
  "django-concurrency",
  "django-constance",
  "django-cors-headers",
  "django-csp",
  "django-debug-toolbar",
  "django-environ",
  "django-extensions",
  "django-filter",
  "django-import-export",
  "django-jsoneditor",
  "django-model-utils",
  "django-mptt",
  "django-smart-admin",
  "django-smart-env",
  "django-storages[azure]",
  "django-strategy-field",
  "django-viewflow",
  "djangorestframework",
  "djangorestframework-xml",
  "drf-spectacular[sidecar]",
  "flower",
  "gunicorn",
  "natural-keys",
  "newrelic",
  "paramiko",
  "phonenumbers",
  "psycopg[binary]",
  "python-redis-lock[django]",
  "redis",
  "sentry-sdk",
  "social-auth-app-django",
  "social-auth-core",
  "swapper",
  "tablib",
  "unicef-security",
  "wheel",
  "zeep",
]

[dependency-groups]
dev = [
  "argh",
  "cairosvg",
  "django-regex",
  "django-webtest",
  "drf-api-checker",
  "factory-boy",
  "faker",
  "freezegun",
  "graphene-stubs",
  "ipdb",
  "markupsafe",
  "mdx-gh-links",
  "mike",
  "openpyxl-stubs",
  "parameterized",
  "parso",
  "pre-commit",
  "pymdown-extensions",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-echo",
  "pytest-factoryboy",
  "pytest-xdist",
  "requests-mock",
  "responses",
  "tox",
  "types-freezegun",
  "types-python-dateutil",
  "types-pytz",
  "types-redis",
  "types-requests",
  "unittest-xml-reporting",
  "watchdog",
]
docs = [
  "mkdocs",
  "mkdocs-alias-plugin",
  "mkdocs-autolinks-plugin",
  "mkdocs-awesome-pages-plugin",
  "mkdocs-click",
  "mkdocs-embed-external-markdown",
  "mkdocs-ezglossary-plugin",
  "mkdocs-ezlinks-plugin",
  "mkdocs-gen-files",
  "mkdocs-get-deps",
  "mkdocs-gitsnippet-plugin",
  "mkdocs-include-markdown-plugin",
  "mkdocs-link-marker",
  "mkdocs-macros-plugin",
  "mkdocs-material",
  "mkdocs-panzoom-plugin",
  "mkdocs-pdf-export-plugin",
  "mkdocs-simple-hooks",
  "mkdocstrings[python]",
]

[tool.nitpick]
style = [
  "github://unicef/hope-code-conventions@main/django/django.toml",
]
cache = "1 day"

[uv]
package = true
